fix card backface css on firefox

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -35,7 +35,8 @@
   justify-content: center;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  filter: brightness(80%);
+  transform: rotateX(0deg);
+  filter: brightness(85%);
   &:hover {
     filter: brightness(100%);
   }
